
find_package(SWIG REQUIRED)
include(${SWIG_USE_FILE})
find_package(PythonInterp REQUIRED)
find_package(PythonLibs REQUIRED)
include_directories(
    ${PYTHON_INCLUDE_PATH}
    ${NINJA_INCLUDES}
    ${PROJECT_SOURCE_DIR}/src/ninja
    ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES}
)


set(SWIG_INPUT_FILE ${PROJECT_SOURCE_DIR}/swig/python/windninja.i)
set(SWIG_OUTFILE_DIR ${PROJECT_SOURCE_DIR}/swig/python)
set(SWIG_CXX_EXTENSION "cpp")
set_property(SOURCE ${SWIG_INPUT_FILE} PROPERTY USE_SWIG_DEPENDENCIES TRUE)
set_property(SOURCE ${SWIG_INPUT_FILE} PROPERTY SWIG_MODULE_NAME WindNinjaPython)
set_property(SOURCE ${SWIG_INPUT_FILE} PROPERTY CPLUSPLUS ON)
set_property(SOURCE ${SWIG_INPUT_FILE} PROPERTY USE_TARGET_INCLUDE_DIRECTORIES TRUE)
swig_add_library(WindNinjaPython
LANGUAGE python
OUTPUT_DIR ${SWIG_OUTFILE_DIR}
SOURCES ${SWIG_INPUT_FILE})

